# lab

./: README.md
csv_viewer/: .gitignore  Makefile  README.md  clean_data.py  color.py  edgeBundledGraphParser.py  graph.py  graphParser.py  main.py  pyproject.toml  requirements.txt  test_noEdge_in_cluter.html  thesis.py
ga-graph/: .gitignore  Makefile  README.md  draw_graph.py  pyproject.toml  requirements.txt
ga-graph/Koala-manygen/: cleaned.csv  cleaned_NBAF_Coauthorship_12dim.csv
ga-graph/Koala-manygen/lib/cma/: plotcmaesdat.py
ga-graph/Koala-manygen/src/ocha/itolab/koala/batch/py4j/: Constants.java  KoalaToSprawlter.java  ObjectFunction.java
ga-graph/Koala-manygen/src/ocha/itolab/koala/core/: ManyLayoutGenerator.java
ga-graph/Koala-manygen/src/ocha/itolab/koala/core/data/: Edge.java  Graph.java  GraphFileReader.java  KoalaFileWriter.java  LayoutFileReader.java  LayoutFileWriter.java  Node.java  PklFileWriter.java  TulipFileReader.java  TulipFileWriter.java
ga-graph/Koala-manygen/src/ocha/itolab/koala/core/forcedirected/: GmlFileReader.java  LinLogLayout.java  PersistentHomology.java
ga-graph/Koala-manygen/src/ocha/itolab/koala/core/mesh/: InitialLayoutInvoker.java  Mesh.java  MeshGenerator.java  MeshGeneratorLinLog.java  MeshSmoother.java  MeshTriangulator.java  Vertex.java
ga-graph/Koala-manygen/src/ocha/itolab/koala/evaluate/sprawlter/: SprawlterEvaluator.java
ga-graph/PersistentHomologyOnGraphs-master/PHFDL0D/libusf/src/usf/dvl/common/: Pair.java
ga-graph/PersistentHomologyOnGraphs-master/PHFDL0D/libusf/src/usf/dvl/graph/edgebundling/: EBEdge.java  EBNode.java
ga-graph/PersistentHomologyOnGraphs-master/PHFDL0D/libusf/src/usf/dvl/graph/layout/: GraphLayout.java
ga-graph/PersistentHomologyOnGraphs-master/PHFDL0D/libusf/src/usf/dvl/graph/layout/forcedirected/: ForceDirectedLayout.java
ga-graph/first_py4j/: AdditionApplication.java  auto_gateway.py  test.py
ga-graph/java_class/ocha/itolab/koala/batch/py4j/: constants.py  csv_writer.py  history_evaluation_stats.py  main.py  my_mutation.py  mydeap.py  nsga2.py  nsga3.py  single_objective.py
ga-graph/py4j_deap/: ObjectFunction.java  auto_gateway.py  mydeap.py
ga-graph/test/: pyvenv.cfg
ga-graph/tulip/: tulip_basic.py
