[project]
name = "csv-viewer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mashumashupan", email = "mashumashupan@gmail.com" }
]
dependencies = [
    "altair>=5.1.2",
    "appnope>=0.1.3",
    "argon2-cffi>=23.1.0",
    "argon2-cffi-bindings>=21.2.0",
    "asttokens>=2.4.0",
    "attrs>=23.1.0",
    "backcall>=0.2.0",
    "beautifulsoup4>=4.12.2",
    "black>=23.10.0",
    "bleach>=6.1.0",
    "blinker>=1.6.3",
    "cachetools>=5.3.1",
    "certifi>=2023.7.22",
    "cffi>=1.16.0",
    "charset-normalizer>=3.3.0",
    "click>=8.1.7",
    "commonmark>=0.9.1",
    "debugpy>=1.8.0",
    "decorator>=5.1.1",
    "defusedxml>=0.7.1",
    "entrypoints>=0.4",
    "executing>=2.0.0",
    "fastjsonschema>=2.18.1",
    "gitdb>=4.0.11",
    "GitPython>=3.1.40",
    "idna>=3.4",
    "importlib-metadata>=6.8.0",
    "ipykernel>=6.25.2",
    "ipython>=8.12.3",
    "ipython-genutils>=0.2.0",
    "ipywidgets>=8.1.1",
    "isort>=5.12.0",
    "jedi>=0.19.1",
    "Jinja2>=3.1.2",
    "jsonpickle>=3.0.2",
    "jsonschema>=4.19.1",
    "jupyter-client>=8.4.0",
    "jupyter-core>=5.4.0",
    "jupyterlab-pygments>=0.2.2",
    "jupyterlab-widgets>=3.0.9",
    "lxml>=4.9.3",
    "MarkupSafe>=2.1.3",
    "matplotlib-inline>=0.1.6",
    "mistune>=3.0.2",
    "mypy-extensions>=1.0.0",
    "nbclient>=0.8.0",
    "nbconvert>=7.9.2",
    "nbformat>=5.9.2",
    "nest-asyncio>=1.5.8",
    "networkx>=3.1",
    "notebook>=7.0.6",
    "numpy>=1.24.4",
    "packaging>=23.2",
    "pandas>=2.0.3",
    "pandocfilters>=1.5.0",
    "parso>=0.8.3",
    "pathspec>=0.11.2",
    "pexpect>=4.8.0",
    "pickleshare>=0.7.5",
    "Pillow>=10.1.0",
    "platformdirs>=3.11.0",
    "prometheus-client>=0.17.1",
    "prompt-toolkit>=3.0.39",
    "protobuf>=4.24.4",
    "psutil>=5.9.6",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.2",
    "pycparser>=2.21",
    "pydeck>=0.8.0",
    "Pygments>=2.16.1",
    "Pympler>=1.0.1",
    "pyparsing>=3.1.1",
    "pyrsistent>=0.19.3",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3.post1",
    "pytz-deprecation-shim>=0.1.0.post0",
    "pyvis>=0.3.2",
    "pyzmq>=25.1.1",
    "requests>=2.31.0",
    "rich>=13.6.0",
    "semver>=3.0.2",
    "Send2Trash>=1.8.2",
    "six>=1.16.0",
    "smmap>=5.0.1",
    "soupsieve>=2.5",
    "stack-data>=0.6.3",
    "streamlit>=1.27.2",
    "terminado>=0.17.1",
    "tinycss2>=1.2.1",
    "toml>=0.10.2",
    "tomli>=2.0.1",
    "toolz>=0.12.0",
    "tornado>=6.3.3",
    "traitlets>=5.11.2",
    "typing_extensions>=4.8.0",
    "tzdata>=2023.3",
    "tzlocal>=5.1",
    "urllib3>=2.0.7",
    "validators>=0.22.0",
    "wcwidth>=0.2.8",
    "webencodings>=0.5.1",
    "widgetsnbextension>=4.0.9",
    "zipp>=3.17.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
